# raire-rs

./: Cargo.toml  README.md  common.css  index.html
Australian Examples/NSW Local Government/: Copyright.txt
WebContent/: SHANGRLA_SF2019_log_with_write_in.json  common.css  download_images.js  elimination_suffix.js  example_output.json  explain_assertions.html  explain_assertions.js  index.html  index.js  prettyprint_assertions_and_pictures.js  util.js
WebContent/example_assertions/: a_guide_to_RAIRE_eg_guide.json  a_guide_to_RAIRE_eg_two_leading_candidates.json  guide_to_RAIRE_slide_25.json
WebContent/example_input/: a_guide_to_RAIRE_eg.json  a_guide_to_RAIRE_eg_NEB_assertions.json  (+4 more)
example_assertions/: a_guide_to_RAIRE__eg_why_not_audit_every_step_output.json  a_guide_to_RAIRE_eg_NEB_assertions_output.json  a_guide_to_RAIRE_eg_one_candidate_dominates.json  a_guide_to_RAIRE_eg_out.json  a_guide_to_RAIRE_eg_two_leading_candidates.json
example_input/: a_guide_to_RAIRE_eg_one_candidate_dominates_input.json
raire/: AssertionTrimmingAlgorithm.md  Cargo.toml
raire-webserver/: Cargo.toml
raire-webserver/src/: main.rs
raire/src/: assertions.rs  audit_type.rs  irv.rs  lib.rs  order_assertions.rs  raire_algorithm.rs  timeout.rs  tree_showing_what_assertions_pruned_leaves.rs
raire/tests/: edge_cases.rs  test_guide_to_raire_examples.rs  test_nsw_lge.rs  test_paper_examples.rs
utilities/: Cargo.toml
utilities/examples/: compare_folder.rs  detailed_info_on_one_example.rs  us_examples.rs
utilities/src/: lib.rs  parse_michelle_format.rs  table_of_results.rs
(+66 files in other folders)
