[package]
name = "utilities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raire = { path = "../raire" }
clap = { version="4.3", features = ["derive"]}
serde = {version="1.0", features = ["derive"]}
serde_json = "1.0"
csv = "1.1"
anyhow = "1.0"
env_logger = "0.10"
log = "0.4.20"